# runex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: build-ci-image.yml  ci.yml  release.yml
containers/ci/: .dockerignore  sanity.sh  ubuntu.Dockerfile
docs/: PRD.ja.md  PRD.md  README.ja.md  config-reference.md  install.ja.md  install.md  recipes.ja.md  recipes.md  setup.ja.md  setup.md
docs/decisions/: 0001-static-integration-cache.md  0002-containerized-linux-ci.md
docs/vhs/: Dockerfile  README.md  demo.tape  record.sh
packaging/aur/: .SRCINFO  .nvchecker.toml  PKGBUILD  release.sh
packaging/aur-bin/: .SRCINFO  PKGBUILD  release.sh
packaging/homebrew/: release.sh
runex/: Cargo.toml  README.md  build.rs
runex-cli/: Cargo.toml
runex-cli/src/: main.rs
runex-cli/tests/: bash_integration.rs
runex-core/: Cargo.toml  README.md
runex-core/src/: config.rs  doctor.rs  env.rs  expand.rs  hook.rs  init.rs  integration_check.rs  lib.rs  model.rs  precache.rs  sanitize.rs  shell.rs  timings.rs
runex-core/src/templates/: bash.sh  clink.lua  nu.nu  nu_expand_binding.nu  nu_literal_binding.nu  pwsh.ps1  zsh.zsh
runex/src/: format.rs  lib.rs  main.rs  shell_alias.rs  win_path.rs
runex/src/app/: bash_static_dispatcher.rs  config.rs  doctor.rs  expand.rs  hook.rs  init.rs  mod.rs  precache.rs  shell_export.rs
runex/src/cmd/: add_remove.rs  config.rs  doctor.rs  expand.rs  export.rs  hook.rs  init.rs  list.rs  mod.rs  paste_clipboard.rs  precache.rs  timings.rs  version.rs  which.rs
runex/src/domain/: expand.rs  hook.rs  mod.rs  model.rs  sanitize.rs  shell.rs  timings.rs
runex/src/domain/templates/: bash.sh  clink.lua  nu.nu  nu_expand_binding.nu  nu_paste_binding.nu  nu_self_insert_binding.nu  pwsh.ps1  zsh.zsh
runex/src/infra/: clipboard.rs  config_store.rs  env.rs  integration_cache.rs  integration_check.rs  mod.rs
runex/src/util/: mod.rs  path.rs  prompt.rs  shell.rs
runex/tests/: architecture.rs  bash_cygwin_bake_pty.rs  bash_gitbash_smoke.rs  bash_integration.rs  bash_pty_integration.rs  cache_pty_smoke.rs  cli_integration.rs  nu_integration.rs  nu_pty_integration.rs  pwsh_integration.rs  pwsh_pty_integration.rs  shell_integration.rs  windows_path_isolation.rs  zsh_integration.rs  zsh_pty_integration.rs
runex/tests/support/: mod.rs  pty.rs  subprocess.rs
