[package]
name = "runex-core"
version = "0.1.8"
edition = "2024"
description = "Core library for runex – a cross-shell abbreviation expansion engine"
license = "MIT"
repository = "https://github.com/ShortArrow/runex"
keywords = ["shell", "abbreviation", "alias", "expansion", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
which = "7"
dirs = "6"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
