[package]
name = "runex"
version = "0.1.13"
edition = "2024"
build = "build.rs"
description = "Cross-shell abbreviation engine that expands short tokens into full commands"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShortArrow/runex"
keywords = ["shell", "abbreviation", "alias", "expansion", "cli"]
categories = ["command-line-utilities"]
# crates.io README is intentionally minimal; canonical docs live in ../README.md
readme = "README.md"

[[bin]]
name = "runex"
path = "src/main.rs"

[dependencies]
runex-core = { version = "0.1.13", path = "../runex-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
base64 = "0.22"

# PTY-driven keystroke tests for the bash integration. Linux only;
# the only consumer is `runex/tests/bash_pty_integration.rs`. expectrl
# 0.7 ships a Windows backend via ConPTY but it is unstable, so we
# gate the dependency to unix targets to keep Windows builds lean.
[target.'cfg(unix)'.dev-dependencies]
expectrl = "0.7"
