[package]
name = "runex"
version = "0.1.14"
edition = "2024"
build = "build.rs"
description = "Cross-shell abbreviation engine that expands short tokens into full commands"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShortArrow/runex"
keywords = ["shell", "abbreviation", "alias", "expansion", "cli"]
categories = ["command-line-utilities"]
# crates.io README is intentionally minimal; canonical docs live in ../README.md
readme = "README.md"

[[bin]]
name = "runex"
path = "src/main.rs"

# `[lib]` declaration deferred to Phase C2b. The C1 commit added one
# pointing at an empty `src/lib.rs`, but enabling a sibling lib
# target before any modules move means bin and lib see different
# `crate::CmdOutcome` etc. — every `pub(crate)` symbol the bin's
# handlers reach for is invisible to the lib half. The cleaner
# sequence is: absorb runex-core into lib first (C2b), then have
# `main.rs` call into the lib through one entry point.

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
# Absorbed from runex-core's Cargo.toml in Phase C. The `runex-core`
# crate that previously held these no longer compiles anything.
toml = "0.8"
toml_edit = "0.22"
dirs = "6"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
base64 = "0.22"
# `serial_test` is needed for tests that mutate process-global state
# ($PATH on Windows). Without it, the multi-threaded test runner can
# interleave a $PATH-mutating test with a $PATH-reading test and
# produce non-deterministic failures.
serial_test = "3"

# PTY-driven keystroke tests for the bash integration. Linux only;
# the only consumer is `runex/tests/bash_pty_integration.rs`. expectrl
# 0.7 ships a Windows backend via ConPTY but it is unstable, so we
# gate the dependency to unix targets to keep Windows builds lean.
[target.'cfg(unix)'.dev-dependencies]
expectrl = "0.7"
